Fixed z-index issue for navbar and faq collapse section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,7 @@ nav {
 
 #navbarNavDropdown{
     background-color: rgb(24, 48, 22);
-    z-index: 4;
+    z-index: 0;
 }
 
 .dropdown-menu {
@@ -552,6 +552,7 @@ label {
     text-decoration: none;
     font-size: 1.15rem;
     text-align: left;
+
 }
 
 .btn:hover {
@@ -580,6 +581,11 @@ label {
 
 #accordion {
     margin-bottom: 30px;
+
+}
+
+#faqhpnocollapse {
+    z-index:-3;
 }
 
 /*---------------------------------------FAQ-Services*/
@@ -612,6 +618,8 @@ label {
     margin-top: 120px;
     text-align: left;
 }
+
+
 /*---------------------------------------Footer*/
 .footer-quote {
     vertical-align: middle;
